# exportBazel

cmake_app/: CMakeLists.txt  MyLibraryConfig.cmake  build.sh
cmake_app/inc/: lib.h
cmake_app/src/: lib.cc
cmake_app/test/: test.cc
